# tmrnewsp1

lib/: Cargo.toml
lib/src/: lib.rs
program/: Cargo.toml
program/elf/: riscv32im-succinct-zkvm-elf
program/src/: main.rs  utils.rs
script/: Cargo.toml  run.sh
script/src/: embeddings.txt  main.rs
